feat(delivery): email raw and enhanced transcripts

--- a/src/interview_analytics_agent/delivery/email/templates/report.html.j2
+++ b/src/interview_analytics_agent/delivery/email/templates/report.html.j2
@@ -30,6 +30,16 @@
   <p><b>Рекомендация:</b></p>
   <p>{{ report.recommendation }}</p>
 
+  {% if has_raw or has_enhanced %}
+    <hr/>
+    <p><b>Транскрипты:</b></p>
+    <p>
+      Во вложениях доступны:
+      {% if has_raw %} raw_transcript.txt {% endif %}
+      {% if has_enhanced %} enhanced_transcript.txt {% endif %}
+    </p>
+  {% endif %}
+
   <hr/>
   <p style="color:#666;font-size:12px;">
     Сгенерировано автоматически агентом аналитики собеседований.
